--- a/frontend-vite/package.json
+++ b/frontend-vite/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/axios": "^0.9.36",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@types/react-router-dom": "^5.3.3",
